@@ -1,53 +1,79 @@
 package ti4.helpers;
 
-import com.google.common.cache.Cache;
-import com.google.common.cache.CacheBuilder;
+import com.github.benmanes.caffeine.cache.Cache;
+import com.github.benmanes.caffeine.cache.Caffeine;
+import com.github.benmanes.caffeine.cache.stats.CacheStats;
 import java.awt.Image;
 import java.awt.image.BufferedImage;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
+import java.text.DecimalFormat;
+import java.time.Instant;
+import java.time.temporal.ChronoUnit;
 import java.util.Arrays;
-import java.util.concurrent.Callable;
-import java.util.concurrent.ExecutionException;
+import java.util.Optional;
 import java.util.concurrent.TimeUnit;
-import javax.annotation.Nullable;
+import java.util.concurrent.atomic.AtomicReference;
+import java.util.function.Function;
+import org.jetbrains.annotations.Nullable;
 import javax.imageio.ImageIO;
+import ti4.AsyncTI4DiscordBot;
 import ti4.message.BotLogger;
 
 public class ImageHelper {
 
-  private static final Cache<String, BufferedImage> imageCache = CacheBuilder.newBuilder()
-      .maximumSize(GlobalSettings.getSetting(GlobalSettings.ImplementedSettings.IMAGE_CACHE_MAX_SIZE.toString(), Integer.class, 1000))
-      .expireAfterAccess(24, TimeUnit.HOURS)
+  private static final int FILE_IMAGE_CACHE_SIZE = GlobalSettings.getSetting(
+      GlobalSettings.ImplementedSettings.FILE_IMAGE_CACHE_MAX_SIZE.toString(), Integer.class, 2000);
+  private static final int FILE_IMAGE_CACHE_EXPIRE_TIME_MINUTES = GlobalSettings.getSetting(
+      GlobalSettings.ImplementedSettings.FILE_IMAGE_CACHE_EXPIRE_TIME_MINUTES.toString(), Integer.class, 60 * 8);
+  private static final Cache<String, BufferedImage> fileImageCache = Caffeine.newBuilder()
+      .maximumSize(FILE_IMAGE_CACHE_SIZE)
+      .expireAfterAccess(FILE_IMAGE_CACHE_EXPIRE_TIME_MINUTES, TimeUnit.MINUTES)
+      .recordStats()
       .build();
+
+  private static final int URL_IMAGE_CACHE_SIZE = GlobalSettings.getSetting(
+      GlobalSettings.ImplementedSettings.URL_IMAGE_CACHE_MAX_SIZE.toString(), Integer.class, 2000);
+  private static final int URL_IMAGE_CACHE_EXPIRE_TIME_MINUTES = GlobalSettings.getSetting(
+      GlobalSettings.ImplementedSettings.URL_IMAGE_CACHE_EXPIRE_TIME_MINUTES.toString(), Integer.class, 60 * 8);
+  private static final Cache<String, BufferedImage> urlImageCache = Caffeine.newBuilder()
+      .maximumSize(URL_IMAGE_CACHE_SIZE)
+      .expireAfterWrite(URL_IMAGE_CACHE_EXPIRE_TIME_MINUTES, TimeUnit.MINUTES)
+      .recordStats()
+      .build();
+
+  private static final int LOG_CACHE_STATS_INTERVAL_MINUTES = GlobalSettings.getSetting(
+      GlobalSettings.ImplementedSettings.LOG_CACHE_STATS_INTERVAL_MINUTES.toString(), Integer.class, 60 * 4);
+  private static final AtomicReference<Instant> logStatsScheduledTime = new AtomicReference<>();
+
+  private static final ThreadLocal<DecimalFormat> percentFormatter = ThreadLocal.withInitial(() -> new DecimalFormat("##.##%"));
 
   private ImageHelper() {}
 
   @Nullable
   public static BufferedImage read(String filePath) {
-    if (filePath == null) return null;
-    return getOrLoad(filePath, () -> readImage(filePath));
+    if (filePath == null) {
+      return null;
+    }
+    return getOrLoadStaticImage(filePath, k -> readImage(filePath));
   }
 
   @Nullable
-  public static Image readScaled(String key, InputStream inputStream, int width, int height) {
-    return getOrLoad(key, () -> {
-      BufferedImage image = readImage(inputStream);
-      if (image == null) {
-        return null;
-      }
-      BufferedImage newImage = new BufferedImage(width, height, BufferedImage.TYPE_INT_RGB);
-      newImage.getGraphics().drawImage(image, 0, 0, width, height, null);
-      return newImage;
-    });
+  public static BufferedImage readURL(String imageURL) {
+    if (imageURL == null) {
+      return null;
+    }
+    return getOrLoadExpiringImage(imageURL, k -> readImageURL(imageURL));
   }
 
   @Nullable
   public static BufferedImage readScaled(String filePath, float percent) {
-    if (filePath == null) return null;
-    return getOrLoad(percent + filePath, () -> {
+    if (filePath == null) {
+      return null;
+    }
+    return getOrLoadStaticImage(percent + filePath, k -> {
       BufferedImage image = readImage(filePath);
       if (image == null) {
         return null;
@@ -56,26 +82,60 @@ public class ImageHelper {
     });
   }
 
+  @Nullable
+  public static BufferedImage readScaled(String filePath, int width, int height) {
+    if (filePath == null) {
+      return null;
+    }
+    return getOrLoadStaticImage(width + "x" + height + filePath, k -> {
+      BufferedImage image = readImage(filePath);
+      if (image == null) {
+        return null;
+      }
+      return scale(image, width, height);
+    });
+  }
+
+  @Nullable
+  public static BufferedImage readURLScaled(String imageURL, int width, int height) {
+    if (imageURL == null) {
+      return null;
+    }
+    return getOrLoadExpiringImage(width + "x" + height + imageURL, k -> {
+      BufferedImage image = readURL(imageURL);
+      if (image == null) {
+        return null;
+      }
+      return scale(image, width, height);
+    });
+  }
+
   public static BufferedImage scale(BufferedImage originalImage, float percent) {
     int scaledWidth = (int) (originalImage.getWidth() * percent);
     int scaledHeight = (int) (originalImage.getHeight() * percent);
-    Image resultingImage = originalImage.getScaledInstance(scaledWidth, scaledHeight, Image.SCALE_FAST);
-    BufferedImage outputImage = new BufferedImage(scaledWidth, scaledHeight, BufferedImage.TYPE_INT_ARGB);
-    outputImage.getGraphics().drawImage(resultingImage, 0, 0, null);
-    return outputImage;
+    return scale(originalImage, scaledWidth, scaledHeight);
   }
 
   public static BufferedImage scale(BufferedImage originalImage, int scaledWidth, int scaledHeight) {
-    Image resultingImage = originalImage.getScaledInstance(scaledWidth, scaledHeight, Image.SCALE_FAST);
+    Image resultingImage = originalImage.getScaledInstance(scaledWidth, scaledHeight, Image.SCALE_SMOOTH);
     BufferedImage outputImage = new BufferedImage(scaledWidth, scaledHeight, BufferedImage.TYPE_INT_ARGB);
     outputImage.getGraphics().drawImage(resultingImage, 0, 0, null);
     return outputImage;
   }
 
-  private static BufferedImage getOrLoad(String key, Callable<BufferedImage> loader) {
+  private static BufferedImage getOrLoadStaticImage(String key, Function<String, BufferedImage> loader) {
     try {
-      return imageCache.get(key, loader);
-    } catch (ExecutionException e) {
+      return fileImageCache.get(key, loader);
+    } catch (Exception e) {
+      BotLogger.log("Unable to load from image cache.", e);
+    }
+    return null;
+  }
+
+  private static BufferedImage getOrLoadExpiringImage(String key, Function<String, BufferedImage> loader) {
+    try {
+      return urlImageCache.get(key, loader);
+    } catch (Exception e) {
       BotLogger.log("Unable to load from image cache.", e);
     }
     return null;
@@ -101,14 +161,54 @@ public class ImageHelper {
     return null;
   }
 
-  public static BufferedImage readImageURL(String imageURL) {
-    try {
-      URL url = new URL(imageURL);
-      InputStream inputStream = url.openStream();
+  private static BufferedImage readImageURL(String imageURL) {
+    ImageIO.setUseCache(false);
+    try (InputStream inputStream = URI.create(imageURL).toURL().openStream()) {
       return readImage(inputStream);
     } catch (IOException e) {
-      BotLogger.log("Failed to read image URL:" + Arrays.toString(e.getStackTrace()));
+      BotLogger.log("Failed to read image URL: " + Arrays.toString(e.getStackTrace()));
     }
     return null;
+  }
+
+  public static Optional<String> getCacheStats() {
+    Instant oldValue = logStatsScheduledTime.getAndUpdate(scheduledLogTime -> {
+      Instant now = Instant.now();
+      if (scheduledLogTime == null || scheduledLogTime.isBefore(now)) {
+        return now.plus(LOG_CACHE_STATS_INTERVAL_MINUTES, ChronoUnit.MINUTES);
+      }
+      return scheduledLogTime;
+    });
+    if (logStatsScheduledTime.get().equals(oldValue)) {
+      return Optional.empty();
+    }
+    return Optional.of(cacheStatsToString("fileImageCache", fileImageCache) + "\n" +
+        cacheStatsToString("urlImageCache", urlImageCache));
+  }
+
+  private static String cacheStatsToString(String name, Cache<String, BufferedImage> cache) {
+    CacheStats stats = cache.stats();
+    return ToStringHelper.of(name)
+        .add("liveTime", getLiveTime())
+        .add("hitCount", stats.hitCount())
+        .add("hitRate", formatPercent(stats.hitRate()))
+        .add("loadCount", stats.loadCount())
+        .add("loadFailureCount", stats.loadFailureCount())
+        .add("averageLoadPenaltyMilliseconds",
+            TimeUnit.MILLISECONDS.convert((long) stats.averageLoadPenalty(), TimeUnit.NANOSECONDS))
+        .add("evictionCount", stats.evictionCount())
+        .add("currentSize", cache.estimatedSize())
+        .toString();
+  }
+
+  private static String getLiveTime() {
+    long millisecondsSinceBotStarted = System.currentTimeMillis() - AsyncTI4DiscordBot.START_TIME_MILLISECONDS;
+    long liveTimeHours = TimeUnit.HOURS.convert(millisecondsSinceBotStarted, TimeUnit.MILLISECONDS);
+    long liveTimeMinutes = TimeUnit.MINUTES.convert(millisecondsSinceBotStarted, TimeUnit.MILLISECONDS) - liveTimeHours * 60;
+    return liveTimeHours + "h" + liveTimeMinutes + "m";
+  }
+
+  private static String formatPercent(double d) {
+    return percentFormatter.get().format(d);
   }
 }
